# Master-MIAX-Tarea-Bloque1-Introduccion

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  output.csv  output_eodhd.csv  output_finfut.csv  requirements.txt  setup.cfg
data/output/reports/: relatorio_afl.md  relatorio_ball.md  relatorio_ben.md  relatorio_cme.md  relatorio_cpay.md  relatorio_cvs.md  relatorio_dd.md  relatorio_fitb.md  relatorio_hpq.md  relatorio_hrl.md  relatorio_lyb.md  relatorio_lyv.md  relatorio_montecarlo_tech.md  relatorio_pcg.md  relatorio_pkg.md  relatorio_portfolio_tech.md  relatorio_rjf.md  relatorio_rol.md  relatorio_ual.md  relatorio_unh.md  relatorio_v.md
data/processed/: output_eodhd_clean_v1.csv  output_eodhd_clean_v2.csv  output_fmp_clean_v2.csv
data/raw/: output_eodhd.csv  output_finfut.csv  output_fmp.csv  output_yfinance.csv
docs/: architecture.md  diagrams.md
examples/: quickstart.py  quickstart_extractors.py  quickstart_macro.py  quickstart_monte_carlo_combined.py  quickstart_monte_carlo_portfolio.py  quickstart_monte_carlo_returns.py  quickstart_portfolio.py  quickstart_price_series.py  reports.py
src/analysis/entities/: distribuition_generator.py  monte_carlo_base.py  monte_carlo_combined.py  monte_carlo_metrics.py  monte_carlo_portfolios.py  monte_carlo_returns.py
src/core/: dataclasses.py  loader.py  models.py  test.py
src/core/entities/: macro_series.py  portfolio.py  price_series.py  time_series.py
src/data/processed/: output_eodhd_clean_v2.csv  output_finfut_clean_v2.csv
src/data/raw/: output_eodhd.csv  output_fmp.csv
src/extractor/: apis_extractor.py  extractor_base.py  format_data_extractor.py  macro_extractor.py  prices_extractor.py
src/extractor/sources/: alphavantage.py  eodhd.py  fmp.py  yahoo.py
src/extractor/sources/macro/: extractor_worldbank.py
src/extractor/sources/prices/: extractor_alphavantage.py  extractor_eodhd.py  extractor_fmp.py  extractor_prices_base.py  extractor_yahoo.py
src/interfaces/: cli.py
src/plots/: plot_macro.py  plot_monte_carlo.py  plot_portfolio.py  plot_price_series.py
src/reports/: report_base.py  report_macro.py  report_monte_carlo.py  report_portfolio.py  report_price_series.py
tests/: test_extractor.py  test_macro.py  test_montecarlo.py  test_portfolio.py
