[metadata]
name = portfolio-toolkit
version = 0.1.0
description = Ferramenta para extração e simulação financeira
author = Seu Nome
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numpy
    matplotlib
    yfinance
    requests
    typer
    pyarrow

[options.entry_points]
console_scripts =
    portfolio = src.cli:app
