[metadata]
name = financial-analysis-toolkit
version = 1.0.0
description = Comprehensive financial analysis and Monte Carlo simulation toolkit
author = Pietro
author_email = pietro@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finance, monte-carlo, portfolio, analysis, simulation
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.0
    numpy>=1.21.0
    matplotlib>=3.5.0
    seaborn>=0.12.0
    yfinance>=0.2.0
    requests>=2.28.0
    typer>=0.7.0
    pyarrow>=10.0.0
    scipy>=1.9.0
    plotly>=5.13.0
    jupyter>=1.0.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    financial-analysis = src.interfaces.cli:app

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=src

[coverage:run]
source = src
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == "__main__":
    raise NotImplementedError
    pass
    raise ImportError

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
